refactor: restructuring folder and add setup package

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,python
 
+test.py
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
