--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "cmds-helper"
@@ -8,7 +8,7 @@ version = "0.0.1"
 authors = [
   { name="Keyisa Raihan", email="keyisakris@gmail.com" },
 ]
-description = "A modul to help us to shortcut and run cli cmd command"
+description = "CLI CMD Command helper"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
