--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,21 @@ build-backend = "hatchling.build"
 name = "cmds-helper"
 version = "0.0.1"
 authors = [
-  { name="Keyisa Raihan", email="keyisakris@gmail.com" },
-  { name="Yoel Mountanus Sitorus", email="sclous2012@gmail.com" }
+  { name = "Keyisa Raihan", email = "keyisakris@gmail.com" },
+  { name = "Yoel Mountanus Sitorus", email = "sclous2012@gmail.com" },
 ]
 description = "CLI CMD Command helper"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
 
 [project.urls]
 "Homepage" = "https://github.com/yotakeys/cmds-helper"
 "Bug Tracker" = "https://github.com/yotakeys/cmds-helper/issues"
+
+[project.scripts]
+cmdshelper = "cmdshelper:main"
